# NTU-LLM-Workshop

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup_mac.bash  setup_win.sh
RNN/: RNN_iteration.ipynb
slides/: 3. Reccurent Neural Networks.pptx  Reference for Robot.pptx
word2vec/: skipgram_implementation.ipynb
