[tool.poetry]
name = "ntu-llm-workshop"
version = "0.1.0"
description = ""
authors = ["HiIAmTzeKean <ngtzekean@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
datasets = "^3.1.0"
torch = "^2.5.1"
nltk = "^3.9.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
